fix nav on mobile

--- a/src/css/nav.less
+++ b/src/css/nav.less
@@ -116,9 +116,9 @@
   @media (max-width: @screen-xs-max) {
     padding: 10px 0;
 
-    > div {
-      width: 25%;
-      margin: 0;
+    .item {
+      width: 20vw;
+      margin: 0 !important;
       text-align: center;
     }
 
